# research_workbench

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENCE  README.md  claude.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.json
api/: deps.py  main.py
api/routers/: artifacts.py  criteria.py  discrepancy.py  documents.py  export.py  ingest.py  projects.py  reading_list.py  research.py  screening.py  workbench.py
docs/: DEPLOYMENT.md  SESSION_NOTES.md  llm_pipeline_and_feedback_loop.md  lora_finetuning_runbook.md  workbench_build_log.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
portfolio_architect/: assistant.py  config.py  secrets.py  vocab.py
portfolio_architect/agents/: coordinator.py  runner.py
portfolio_architect/artifact/: renderer.py
portfolio_architect/claims/: clustering.py  conversation.py  doi_ingest.py  drug_normalizer.py  extraction.py  projection.py  retrieval.py
portfolio_architect/db/: claim_clusters.py  claims.py  criteria.py  documents.py  judge_verdicts.py  migrations.py  pool.py  (+4 more)
scripts/: backfill_claim_embeddings.py  backfill_pub_dates.py  build_conversations.py  compute_cluster_coords.py  export_lora_dataset.py  extract_claims.py  finetune_lora.py  ingest_global_warming.py  ingest_womens_cancer_drugs.py  init_db.py  migrate_embeddings_to_blob.py  migrate_sqlite_to_postgres.py  rebuild_clusters.py
tests/: conftest.py  test_criteria.py  test_evolutionary.py  test_judge.py
ui/: app.py
(+74 files in other folders)
